add Conatant generator